# network-info

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.mkd  network-info.cabal  run-tests.bat  run-tests.sh
.github/workflows/: ci.yml
cbits/: common.h  list.c  list.h  network-linux.c  network-unix.c  network-windows.c  network.h
src/Network/: Info.hsc
test/: Main.hs  network-info-test.cabal  run-tests.bat
test/src/: Main.hs
