Name:                network-info
version:             0.1
synopsis:            Access the local computer's basic network configuration
description:         This library provides simple read-only access to the local computer's
                     networking configuration. It is currently capable of getting a list of
                     all the network interfaces and their respective IPv4, IPv6 and MAC
                     addresses.
                     .
                     The executable 'test-network-info' will only be built if the flag 'test'
                     has been set.
homepage:            http://github.com/jystic/network-info
license:             BSD3
license-file:        LICENSE
author:              Jacob Stanley
maintainer:          jacob@stanley.io
category:            Network
build-type:          Simple
cabal-version:       >=1.8.0.4

source-repository head
  type:     git
  location: git://github.com/jystic/network-info.git

Flag test
  description: Build test program
  default:     False

Library
  hs-source-dirs: src
  include-dirs: cbits
  cc-options: -Wall -Werror

  exposed-modules: Network.Info
  
  build-depends:
    base == 4.*

  if os(linux)
    c-sources: cbits/network-linux.c
  else
    if os(windows)
      c-sources: cbits/network-windows.c
      extra-libraries: iphlpapi
    else
      buildable: False

Executable test-network-info
  hs-source-dirs: test
  main-is: Main.hs

  if flag(test)
    build-depends:
      base == 4.*,
      network-info
  else
    buildable: False
