name:           network-info
version:        0.2
synopsis:       Access the local computer's basic network configuration
description:    This library provides simple read-only access to the local computer's
                networking configuration. It is currently capable of getting a list of
                all the network interfaces and their respective IPv4, IPv6 and MAC
                addresses.
                .
                network-info has been tested and is known to work on Ubuntu 10.10, Mac
                OS X 10.6.4 and Windows XP.
homepage:       http://github.com/jystic/network-info
license:        BSD3
license-file:   LICENSE
author:         Jacob Stanley
maintainer:     jacob@stanley.io
category:       Network
build-type:     Simple
cabal-version:  >= 1.6

extra-source-files:
  cbits/common.h,
  cbits/network.h,
  test/src/Main.hs,
  test/network-info-test.cabal,
  test/run-tests.bat,
  test/run-tests.sh,
  README.mkd

source-repository head
  type:     git
  location: git://github.com/jystic/network-info.git

Library
  hs-source-dirs: src
  include-dirs: cbits
  cc-options: -Wall -Werror

  exposed-modules: Network.Info
  
  build-depends:
    base == 4.*

  if os(linux) || os(darwin)
    c-sources: cbits/network-unix.c
  else
    if os(windows)
      c-sources: cbits/network-windows.c
      extra-libraries: iphlpapi
    else
      buildable: False
