name:           network-info
version:        0.2.1
synopsis:       Access the local computer's basic network configuration

description:    This library provides simple read-only access to the
                local computer's networking configuration. It is
                currently capable of getting a list of all the network
                interfaces and their respective IPv4, IPv6 and MAC
                addresses.
                .
                network-info has been tested and is known to work on
                Ubuntu, FreeBSD, NetBSD, Mac OS and Windows.

homepage:       http://github.com/jacobstanley/network-info
license:        BSD3
license-file:   LICENSE
author:         Jacob Stanley
maintainer:     Jacob Stanley <jacob@stanley.io>
category:       Network
build-type:     Simple
cabal-version:  >= 1.10

tested-with:
  GHC == 8.8.4,
  GHC == 8.10.7,
  GHC == 9.0.1,
  GHC == 9.2.1

extra-source-files:
  cbits/common.h,
  cbits/common.inc,
  cbits/network.h,
  test/src/Main.hs,
  test/network-info-test.cabal,
  test/run-tests.bat,
  test/run-tests.sh,
  README.mkd,
  CHANGELOG.md

source-repository head
  type:     git
  location: git://github.com/jacobstanley/network-info.git

library
  default-language: Haskell2010
  hs-source-dirs: src
  include-dirs: cbits
  cc-options: -Wall -std=c99

  exposed-modules: Network.Info

  build-depends:
    base == 4.*

  if os(windows)
    c-sources: cbits/network-windows.c
    extra-libraries: iphlpapi
  else
    c-sources: cbits/network-unix.c
  if os(solaris)
    extra-libraries: socket, nsl
